# SwarmGame

./: .gitignore  CMakeLists.txt  README.md
config/: config.json  scenario.json
examples/cpp/: CMakeLists.txt  Controller.cpp  Controller.h  main.cpp
src/: main.cpp
src/common/: FileUtils.cpp  FileUtils.h  Geometry.cpp  Geometry.h  JsonWrapper.h  MapboxWrapper.h  MessageTopics.h  Module.cpp  Module.h  Obstacle.cpp  Obstacle.h  Params.h  Renderable.h  Scenario.h  Uav.cpp  Uav.h
src/sim/: Lidar2d.cpp  Lidar2d.h  Model.cpp  Model.h  SensorData.h  SimulationParams.h
src/vis/: CameraController.cpp  CameraController.h  VisPrimitives.h  VisualisationParams.h  Visualiser.cpp  Visualiser.h
